Bug fixed on firefox fs

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,7 @@ html, body {
 }
 
 #preview_wrapper.HTML #preview {
+	background: white;
 	overflow: hidden;
 }
 
